# Combined

./: .gitignore  ConflictChecker.spec  Makefile  README.md  build_mac.sh  build_win.bat  pyproject.toml  requirements.txt  run_tests.py
Backend/: .gitignore  README.md  api_cost_estimate_2019.md  conflict_flags_openai_2019.json  filtered_conflict.json  requirements.txt  test_conflicts.json
Backend/_unused/: README.md
Backend/tests/: test_api_cost_estimator_contract.py  test_county_registry_contract.py  test_form700_parser_contract.py  test_higher_spec_openai_export_safety.py  test_higher_spec_openai_input_selection.py  test_preprocess_contract.py  test_sacramento_scraper_contract.py  test_sonoma_scraper_contract.py  test_sqlite_store.py  test_useful_functions_contract.py
Frontend/: README.md  app.py  main.py  requirements.txt
Frontend/agents/: base_agent.py  browser_agent.py  confidence_agent.py  officials_agent.py  pipeline_agent.py  selection_agent.py  summary_agent.py
Frontend/core/: data_loader.py  email_config.py  email_sender.py  filter_engine.py  filter_tasks.py  pipeline_runner.py
Frontend/tests/: test_app_data_selection_contract.py  test_data_loader_contract.py  test_email_config_contract.py  test_export_safety_contract.py  test_filter_engine_contract.py  test_filter_tasks_contract.py  test_pdf_export_contract.py  test_pipeline_runner_contract.py
Frontend/ui/: email_dialog.py  theme.py
assets/: app_icon.icns
shared/: __init__.py  export_safety.py  output_naming.py  resource_path.py
web_scraping /: scraper_Sacramento_County
(+18 files in other folders)
